--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Gray
-email: email@email.com
+title: About Tech and Art
+email: yiming.song09@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Lorem Ipsum
 url: "https://brunofolle.com.br" # the base hostname & protocol for your site, e.g. http://example.com
