--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: yiming.song09@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to my personal blog. This is where I share my thoughts and ideas.
 baseurl: ""
-url: "https://<your-github-username>.github.io/my-blog"
+url: "https://ysong233.github.io/"
 theme: minima
 permalink: /:title/
 
